fix: icon-ok
4e19afc1d04dd7e3932eb5ac95e85bebcc5e61d7 added icon-search, but its
unicode value overlapped with icon-ok

--- a/icons/css/fontello-search.css
+++ b/icons/css/fontello-search.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello-search.eot?51346967');
-  src: url('../font/fontello-search.eot?51346967#iefix') format('embedded-opentype'),
-       url('../font/fontello-search.woff2?51346967') format('woff2'),
-       url('../font/fontello-search.woff?51346967') format('woff'),
-       url('../font/fontello-search.ttf?51346967') format('truetype'),
-       url('../font/fontello-search.svg?51346967#fontello') format('svg');
+  src: url('../font/fontello-search.eot?7819751');
+  src: url('../font/fontello-search.eot?7819751#iefix') format('embedded-opentype'),
+       url('../font/fontello-search.woff2?7819751') format('woff2'),
+       url('../font/fontello-search.woff?7819751') format('woff'),
+       url('../font/fontello-search.ttf?7819751') format('truetype'),
+       url('../font/fontello-search.svg?7819751#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?51346967#fontello') format('svg');
+    src: url('../font/fontello.svg?7819751#fontello') format('svg');
   }
 }
 */
@@ -55,4 +55,4 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
  
-.icon-search:before { content: '\e800'; } /* '' */
+.icon-search:before { content: '\e80c'; } /* '' */
